# esp32_wifi_clients

./: NOTES.md  README.md  pyproject.toml  requirements.txt
esp32_wifi/: __init__.py  cli.py  device.py  live_view.py  logger.py  manager.py  performance.py
esp32_wifi_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
firmware/esp32_wifi_reporter/: esp32_wifi_reporter.ino
